Fix grid overflow in firefox

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ h1 {
   flex-direction: row;
   flex-wrap: wrap;
   align-content: center;
-  width: 550px;
+  width: 551px;
   height: 550px;
   padding: 0px;
   align-items: center;
